@@ -225,6 +225,8 @@ new TWTR.Widget({
 <li>Sep 30, 2010 - <a href="http://blogs.apache.org/hama/entry/hama_in_academic_paper">Hama peper</a> has accepted at <a href="http://salsahpc.indiana.edu/CloudCom2010/papers.html">IEEE CloudCom 2010 Workshop</a>
 </li>
       
+<li>Jul 15, 2010 - We got rid of dependencies of MapReduce and HBase [<a href="http://blogs.apache.org/hama/entry/how_will_hama_bsp_different">Read more</a>]</li> 
+      
 <li>Apr 30, 2010 - We're introduced in the <a href="http://www.bsp-worldwide.org/bspww3000.html">BSP Worldwide</a>.</li>
       
 <li>December 11, 2009 - We made the BSP (Bulk Synchronous Parallel) package 
@@ -241,7 +243,7 @@ new TWTR.Widget({
 </div>
     
      
-<a name="N1003F"></a><a name="Overview"></a>
+<a name="N10046"></a><a name="Overview"></a>
 <h2 class="h3"> Overview </h2>
 <div class="section">
 <p>
@@ -253,7 +255,7 @@ new TWTR.Widget({
 </div>
     
     
-<a name="N1004C"></a><a name="Getting+Started"></a>
+<a name="N10053"></a><a name="Getting+Started"></a>
 <h2 class="h3"> Getting Started </h2>
 <div class="section">
 <p>
@@ -270,7 +272,7 @@ new TWTR.Widget({
 </div>
  
      
-<a name="N10061"></a><a name="Getting+Involved"></a>
+<a name="N10068"></a><a name="Getting+Involved"></a>
 <h2 class="h3"> Getting Involved </h2>
 <div class="section">
 <p>
