@@ -69,10 +69,10 @@ endobj
 >>
 endobj
 16 0 obj
-<< /Length 2293 /Filter [ /ASCII85Decode /FlateDecode ]
+<< /Length 2452 /Filter [ /ASCII85Decode /FlateDecode ]
  >>
 stream
-GatU5=``=U&:W67i*560"<kPgls&g;8#Jr-aO<8iH(ZTW@SMsn%k7MP?!b<uQfN<Fj"V,3\)/h3!e#L+HMuDNW(ftGDS%Z`h23*tr1f!b_ObOIKNbNuG;-bET]F7?`LM8S`>9,DUf?YUi`'/#hi58*=1<CS++R66]j%lmQ;+mT)Kp2q'mBp>Ea_)3r`WUZ"K4Uh90cS(*+Ct2mX)sD%fc3+B69`6]G%N_<a[L7`Qg5GWWb2XWE-2VlP@_>o$1?7DA(iN!RiC>1CaUFIH!;hhhV`*E5sb0`k"%&PKe<+@O3`CYP5jVQr,lj!%Ph/-']\TrB('^5-[e.(8*%T";T<XA0UK0ij`ASlS-lBI8D>Q#%8pc;Ja]T3Ff<_4lY4RY6EnI>L2lFKMZJKgtpo5.F]*^)VmiA@fU]Qi5;D=GlYrb$7_c/EE[3sd_d&-*Vs0r-<ntW";mX6!9RTU<XC7]D;%Yr*Pg6PQCTc8(g?4@`W^po";T=fC&V6$dnH&8<F3]<ND]b*:5OO=egYp/jd2:#rn"@5QX$J#Pa$I)WC!++;5/LmpL::+p`?F%#6&3JL6NA+jo*1FR3Nl>7G$kOZ^IiPK0i$D'oi:do)R^bPr\7`J4pq3W-H/oa.$#7&JOh/iMuK[+r7OFE-r-!n/66(5]3#2qJX^g%hA^F"/T0TR/Tc5W8A-%7L\^u?Sn+t0CE1P=7N%hYFgtsT;P7aTaL]XaFcGfnbna,bC]4<fHJmcF32WdnJMQ>4i6NCE_IE1m!duXcr(_'9A*o=EE`cTSc!s1[Wm5>cabV=i-j0W];e,[$g%4jn]ACHVc=c^mtE4)Y6[-Q8Pc;V*J5aM*b+Zpr3e_O\BliJDA0L]r>qq$g9**oN"Q10%q./m;c`uLWO\gF,d&-mEL?S<`+?%B@Z':Dmn\!=29]7EU0#@o!t.CD$kHu"p0rng0!_j?au"U:#\j[HcC_:**gE^<`A@k1*W!h7$-2N]!I]_rb_IIF*WiPMeW>hNC9\;0kk$U[VRnT(c@0Na::jFP*tTPU&p+/SZ:-Nar%[\lj/[G_:]D#8W>r%327fPk=Q(UmL)T][q=?$*@jFgUcPQn5TE>MN4_%`Q(@<""c.oDbW&GD/s!OucjrLMJ=Y0/Vi"OqG\FuT_9iR@&oMB7''rHbf.\gOP[^LI#&18<_d+&7&(.qH?Rd<Js`AApr5)!FSUOR9ARUB3SE1]N_.Y1!s3(siK;+*B'M_Ka<Bs`l:+`L7IBi8@8K'^S%8cBbY?I/W_J0TQ<SD*'j[R]XOPdLV@%NttW6lFigTljK!3H0qLE&MBAG>YQWTaH/laP_/%1H._^V!`7+l$]!WhfU'g47b>R@48;-D0ZKX8Gb<IP"k!%Z^GJcT*9J?`^6*g:6^&AXNM`)]J5V<o`G=d\3;]cPLs&NNYAN0UD@9d.;3heSl)(18r-N-P+I=d7fn'OPG[P*6l<i*+nDta_"-Fc3#d!md79(k$<k1"<4%9D/SI9%Q91k%L0ZP,_4nhgM:oN&%h[mESGIfJRK-\A0S\LQ#REWGk49.IX;"*FK86f`-X&9JH&%7elZ\/'4;Yh'017eb2ecA7+G2<TF3CtaVVA4FHR[0',f_`*0#Y<^35foUq&um>GsRs)2C375BFEVu"`]t;Zml:/0@6e`;M_0t!bDB3s8OMmpq\ei<YfJCVN#^B$%]/Nd!86akn,1Y6X-#:L<_('O``sa[FM)=[@1-,^%e"P]Sm2KXEcJ'_4($cHGHSYq@+gFeop<if%UZ<lEU-W>]$I4rH0Gl5%ucs*1OX)[D9JRb3)BLm1B`_FU[iCY47V*olJ&[Ep'/-W"K7gGb:SiPR^[B9!)[$@gHiU_&8IT4qAgY8l8!bNjkGFb;sIAaB;P#L2[>.bgO0gcW,iHXu@bfVa!4F_b4RfC)7VF+9hm)KFc&d4CogaM0fK+TZ1DuC.84"GlZce=S*6#]d/V@2>1hCdc'0<@\U23;n^I%0aQJH8N]-Y0Q&c@+(C0hi']2ArnDs"CR9\.mnl:C#E>Fc>!HBF5DJ)`#j?h6Ra"-s[o>#<fN*^smRYq0\^n`dFc@R>!.pVF1SpV>.n('+>nq2Ze9+X0LgUFo]A^eHgP-Su>D<@r/S0D*PuP\1f18"HiOQ&YIra3Q"*-ae3p`PG4+0pZ`H/WL_lUUR_!J=+J&LYta\R8jj]'QG?:X7$f9rI!L?tXH(O(NgcZ\gM"ukSSNWH;VN:tdOHci,>^1k_2DdIP0Tk`,-qIisdpPsEjk)X\FkDse!0Rn1RENBq8mK0LZ+`\FVM"9B:?g)'L~>
+GatU5968iG&AII3nCDh2@0l?+p(k88S4o-DQDZa]3RAHcZ_e"o%kIYR?+tgm?]s.5N%MitDa,dr(VA&Uh<OBSh]Rqn)0ai#AaEI9Yi(9RJH^+dA"1F1N4Zdnr=q%?N&T7gk?m'9Lo7'fJ)Q1B_Y@QpI9Kq6Xo8?c)X5/>7BmksH(NtOCYo9=FGu_/&$%orQSeeQ&D@cDPuH;AgfF/4V/D(gp:WOk:Ft''3.<B^k*][k>HcS->/X=62je^qB&%hh<eOUf&9r`iR++(g#.4N]F(mk$(m`9Kh`)J=FrQug^,$HRM4o1MK_o^XjZipHKP`?@*!,9h!Pf1=gN$m,HD4#.&^>R?o8Y9n$gQ(K;ltHV$Y@^>MKi1m%@S_YG&.iL$lm7<#'UIAZYV09'Ut08f@P'NFTo0BDc,O3^`*7VE+ic'5k:.kMWe%aWm-g]c]QbOpP*2*79r92_0Q*ShFV7CTH`-Fbp:[;Coq@'-t@ed:48Kh_/Ya5,5P$p:W9*MA@bV%AXqW`!T8#s$r#,FdAJHk5#0n0'[qR0`ms7C5l!3s;7q^eqRhA59K,(n@U;a3p`*nTHrEH>3_U.>c"1"Ms*^M$7)q0af3#t+Nkc%HJG/#%6;\pT'A`4u1T+$dYE,2+ko5Ipb<\8[9pa+^99-]Qij]dbT?)'d:p'XMiDQ++\T"s%kI?]`+`;Gdn$;l@)b[`j00))I3%]2KHbp!5WR'ZNT=]DWZOfSYr*`<#,B-/"XIhK6oHf1EdH15jCuX(95p7P4$:b*mH3!FX"1[2=JBYo/;"93tO_bNtB$(PsY$,`bo`J5&S`9qt^cM,FTX<E;E9%F\B[0uh7ruj;h!i.jpOhU)qSE-2b:7d8j7Q%`4m!q''hUAk_`UU*T%m\O\L`]2_VHYTKeWimYW$VsY<FAdEaZcK-Vd8b&joeNgMA6497a./a.jDj!^5kV5eu]\[b=^b9&tZiB>l4DC+ZG*-gXC^o88\#;fP'JrAfh#n0-cR`jb>>V?bY,l]_1:X@ilWX=`.d:F`^s"PPuJ_5pC;"fN]tP0/os[N*5ZM-(=U^=%ogQKu<"bYckDCE8=6)2f#K#[RbDkY[5NR%fu>9GDIqns?>FW/"C=O(TRo33RP+"o8SkF81?8p_8Lt_^X_X)H@:kliuR5cW=lN(d=_FcU)C_8hk-.:asjM:K&bcE:niIFq1OH75AZF0sC].kl"eZjl12"Q-.IR9@aPHCoC<I=!OIMq2]0[5KE[UgD.>dCYB=r?!$BD[qK'P5CKh45bO8/7c!.dd6dZaW5(1W"uakgMK9;shS_jN`t+GY<0>gG<>h\r27:]H4[218NfF=d:L)\LKJe#kBa<+)fk72>dm*YcRUB4fkV8(sWGj<"`GW6tM^$0d=[:f6QLQknL;748MmU:l\[aM':\+6be*Zu"6SRRs'N;V+bT>.kj^i9o1h2t$)Y#So^HghXb&cL.]\mJM[bZ5Bero'*,"3HjSOGOP3jK$)@g)%ERG>ML_$dmBCR@Ij>`3HE#]WH5?<$0d1%ipbFJ,r2TX&@_fI.@sn5=I_FW'>$2.e&]JXEkJejlTI%Gn/*J_#]]n@MI"N=Oc"b*#1"hPsH$K+Q'oL_jo]5gNV2!i6.JO'W#KK*,M'F;p1q]UCBb1X]g@]g6JEGaK^g7Q25D`ROcdLIY(iS)ni8k38E4J\%9M>:)%Y?pb3U4jRR.&<a+/7<HEP;3_er1@\J%MAGMjLeg-g2HWaCf]tI?WqI"?Vn'>I6H"%NQ-PP^InZJ'o"<oD[R3aN3PD&kqY(;FDUZ%>S(P)kHQX[O)+UH2;#LI?.P3Yf8hH,/nGiMa)Slm33*Y(3I`:Moa3t=(C5pMsW2<4LUigObrRQ*<$'08-4kN.HmI".P/)!/dRIRqK$]]CO_srJhh%sO]7nr[r<^?'//NE3JmuX36MI2G+((+oKj01<hc!#_l9%G!>4]O\4)B@YATs(68DK7kXFkr(f<6h$+*\UA%K,\ft;`[`P/%(_/NZma4"D!IAZ$?UH<f/*,[D0t6?(o0eMVMc3@gI8Y6#GHCo3A+?id-=6Gl#h0*ZcebX*.A!#\"oQ6NloC3+XC]MKoH*TE]/",rHnII6@SGI:SO?M"["aB3!WgI5M+B>"l:]CU2QS+GPoA:'C*/JNtA2SCY_/ZnTkLp+u`N5cD*6_X19lc[A#9e5kmJbPK6jC^B"2D4&R6W*ZJ?7;T"k=a-ZWJ6_DLbIY\)C]HaQ^St+ke!6Y`m]MF+*:c-DUdn7Vr\erhh2()V!R,AtLI.BTTR/!H8^q#k5*57sg>@C#fG=X16=+cd6G']&+KuU<m>;FTIY!.*A#m<WmWcjO4jn?X^pj9&db!o!QMN#`(U6$91E#j+(KYNo14eU,&13'n5$MSOH+\K?/nLY4*?B9Z)YHlJmAPC#BEtR:BZIX^BP.PB7jjTJC=)/sd$PV3LZ6QX[egjZZ/D_~>
 endstream
 endobj
 17 0 obj
@@ -90,10 +90,11 @@ endobj
 20 0 R
 21 0 R
 22 0 R
-25 0 R
+23 0 R
 26 0 R
 27 0 R
 28 0 R
+29 0 R
 ]
 endobj
 19 0 obj
@@ -121,10 +122,10 @@ endobj
 21 0 obj
 << /Type /Annot
 /Subtype /Link
-/Rect [ 297.12 620.466 375.456 608.466 ]
+/Rect [ 438.264 620.466 497.58 608.466 ]
 /C [ 0 0 0 ]
 /Border [ 0 0 0 ]
-/A << /URI (http://www.bsp-worldwide.org/bspww3000.html)
+/A << /URI (http://blogs.apache.org/hama/entry/how_will_hama_bsp_different)
 /S /URI >>
 /H /I
 >>
@@ -132,30 +133,41 @@ endobj
 22 0 obj
 << /Type /Annot
 /Subtype /Link
-/Rect [ 488.928 607.266 504.924 595.266 ]
+/Rect [ 297.12 607.266 375.456 595.266 ]
 /C [ 0 0 0 ]
 /Border [ 0 0 0 ]
-/A 24 0 R
+/A << /URI (http://www.bsp-worldwide.org/bspww3000.html)
+/S /URI >>
 /H /I
 >>
 endobj
 23 0 obj
+<< /Type /Annot
+/Subtype /Link
+/Rect [ 488.928 594.066 504.924 582.066 ]
+/C [ 0 0 0 ]
+/Border [ 0 0 0 ]
+/A 25 0 R
+/H /I
+>>
+endobj
+24 0 obj
 <<
 /Type /FileSpec
 /F (http://people.apache.org/~edwardyoon/papers/Apache_HAMA_BSP.pdf)
 >>
 endobj
-24 0 obj
+25 0 obj
 <<
 /S /GoToR
-/F 23 0 R
+/F 24 0 R
 /D [ 0 /XYZ null null null ] 
 >>
 endobj
-25 0 obj
+26 0 obj
 << /Type /Annot
 /Subtype /Link
-/Rect [ 370.632 594.066 485.94 582.066 ]
+/Rect [ 370.632 580.866 485.94 568.866 ]
 /C [ 0 0 0 ]
 /Border [ 0 0 0 ]
 /A << /URI (./developers.html)
@@ -163,10 +175,10 @@ endobj
 /H /I
 >>
 endobj
-26 0 obj
+27 0 obj
 << /Type /Annot
 /Subtype /Link
-/Rect [ 108.0 404.198 165.648 392.198 ]
+/Rect [ 108.0 390.998 165.648 378.998 ]
 /C [ 0 0 0 ]
 /Border [ 0 0 0 ]
 /A << /URI (http://wiki.apache.org/hama/GettingStarted)
@@ -174,10 +186,10 @@ endobj
 /H /I
 >>
 endobj
-27 0 obj
+28 0 obj
 << /Type /Annot
 /Subtype /Link
-/Rect [ 147.324 306.264 281.316 294.264 ]
+/Rect [ 147.324 293.064 281.316 281.064 ]
 /C [ 0 0 0 ]
 /Border [ 0 0 0 ]
 /A << /URI (http://wiki.apache.org/hama/HowToContribute)
@@ -185,10 +197,10 @@ endobj
 /H /I
 >>
 endobj
-28 0 obj
+29 0 obj
 << /Type /Annot
 /Subtype /Link
-/Rect [ 108.0 293.064 207.984 281.064 ]
+/Rect [ 108.0 279.864 207.984 267.864 ]
 /C [ 0 0 0 ]
 /Border [ 0 0 0 ]
 /A << /URI (http://wiki.apache.org/hama/Jira)
@@ -196,65 +208,65 @@ endobj
 /H /I
 >>
 endobj
-30 0 obj
-<<
- /Title (\376\377\0\61\0\40\0\122\0\145\0\143\0\145\0\156\0\164\0\40\0\116\0\145\0\167\0\163)
- /Parent 29 0 R
- /Next 31 0 R
- /A 9 0 R
->> endobj
 31 0 obj
 <<
- /Title (\376\377\0\62\0\40\0\117\0\166\0\145\0\162\0\166\0\151\0\145\0\167)
- /Parent 29 0 R
- /Prev 30 0 R
+ /Title (\376\377\0\61\0\40\0\122\0\145\0\143\0\145\0\156\0\164\0\40\0\116\0\145\0\167\0\163)
+ /Parent 30 0 R
  /Next 32 0 R
- /A 11 0 R
+ /A 9 0 R
 >> endobj
 32 0 obj
 <<
- /Title (\376\377\0\63\0\40\0\107\0\145\0\164\0\164\0\151\0\156\0\147\0\40\0\123\0\164\0\141\0\162\0\164\0\145\0\144)
- /Parent 29 0 R
+ /Title (\376\377\0\62\0\40\0\117\0\166\0\145\0\162\0\166\0\151\0\145\0\167)
+ /Parent 30 0 R
  /Prev 31 0 R
  /Next 33 0 R
- /A 13 0 R
+ /A 11 0 R
 >> endobj
 33 0 obj
 <<
- /Title (\376\377\0\64\0\40\0\107\0\145\0\164\0\164\0\151\0\156\0\147\0\40\0\111\0\156\0\166\0\157\0\154\0\166\0\145\0\144)
- /Parent 29 0 R
+ /Title (\376\377\0\63\0\40\0\107\0\145\0\164\0\164\0\151\0\156\0\147\0\40\0\123\0\164\0\141\0\162\0\164\0\145\0\144)
+ /Parent 30 0 R
  /Prev 32 0 R
- /A 15 0 R
+ /Next 34 0 R
+ /A 13 0 R
 >> endobj
 34 0 obj
+<<
+ /Title (\376\377\0\64\0\40\0\107\0\145\0\164\0\164\0\151\0\156\0\147\0\40\0\111\0\156\0\166\0\157\0\154\0\166\0\145\0\144)
+ /Parent 30 0 R
+ /Prev 33 0 R
+ /A 15 0 R
+>> endobj
+35 0 obj
 << /Type /Font
 /Subtype /Type1
 /Name /F3
 /BaseFont /Helvetica-Bold
 /Encoding /WinAnsiEncoding >>
 endobj
-35 0 obj
+36 0 obj
 << /Type /Font
 /Subtype /Type1
 /Name /F5
 /BaseFont /Times-Roman
 /Encoding /WinAnsiEncoding >>
 endobj
-36 0 obj
+37 0 obj
 << /Type /Font
 /Subtype /Type1
 /Name /F1
 /BaseFont /Helvetica
 /Encoding /WinAnsiEncoding >>
 endobj
-37 0 obj
+38 0 obj
 << /Type /Font
 /Subtype /Type1
 /Name /F2
 /BaseFont /Helvetica-Oblique
 /Encoding /WinAnsiEncoding >>
 endobj
-38 0 obj
+39 0 obj
 << /Type /Font
 /Subtype /Type1
 /Name /F7
@@ -269,13 +281,13 @@ endobj
 2 0 obj
 << /Type /Catalog
 /Pages 1 0 R
- /Outlines 29 0 R
+ /Outlines 30 0 R
  /PageMode /UseOutlines
  >>
 endobj
 3 0 obj
 << 
-/Font << /F3 34 0 R /F5 35 0 R /F1 36 0 R /F2 37 0 R /F7 38 0 R >> 
+/Font << /F3 35 0 R /F5 36 0 R /F1 37 0 R /F2 38 0 R /F7 39 0 R >> 
 /ProcSet [ /PDF /ImageC /Text ] >> 
 endobj
 9 0 obj
@@ -287,73 +299,74 @@ endobj
 11 0 obj
 <<
 /S /GoTo
-/D [17 0 R /XYZ 85.0 542.666 null]
+/D [17 0 R /XYZ 85.0 529.466 null]
 >>
 endobj
 13 0 obj
 <<
 /S /GoTo
-/D [17 0 R /XYZ 85.0 450.732 null]
+/D [17 0 R /XYZ 85.0 437.532 null]
 >>
 endobj
 15 0 obj
 <<
 /S /GoTo
-/D [17 0 R /XYZ 85.0 379.198 null]
+/D [17 0 R /XYZ 85.0 365.998 null]
 >>
 endobj
-29 0 obj
+30 0 obj
 <<
- /First 30 0 R
- /Last 33 0 R
+ /First 31 0 R
+ /Last 34 0 R
 >> endobj
 xref
-0 39
+0 40
 0000000000 65535 f 
-0000006863 00000 n 
-0000006928 00000 n 
-0000007020 00000 n 
+0000007244 00000 n 
+0000007309 00000 n 
+0000007401 00000 n 
 0000000015 00000 n 
 0000000071 00000 n 
 0000000644 00000 n 
 0000000764 00000 n 
 0000000810 00000 n 
-0000007143 00000 n 
+0000007524 00000 n 
 0000000945 00000 n 
-0000007206 00000 n 
+0000007587 00000 n 
 0000001082 00000 n 
-0000007272 00000 n 
+0000007653 00000 n 
 0000001219 00000 n 
-0000007338 00000 n 
+0000007719 00000 n 
 0000001355 00000 n 
-0000003741 00000 n 
-0000003864 00000 n 
-0000003940 00000 n 
-0000004151 00000 n 
-0000004356 00000 n 
-0000004552 00000 n 
-0000004691 00000 n 
-0000004798 00000 n 
-0000004870 00000 n 
-0000005040 00000 n 
-0000005234 00000 n 
-0000005431 00000 n 
-0000007404 00000 n 
+0000003900 00000 n 
+0000004023 00000 n 
+0000004106 00000 n 
+0000004317 00000 n 
+0000004522 00000 n 
+0000004737 00000 n 
+0000004933 00000 n 
+0000005072 00000 n 
+0000005179 00000 n 
+0000005251 00000 n 
+0000005421 00000 n 
 0000005615 00000 n 
-0000005771 00000 n 
-0000005925 00000 n 
-0000006120 00000 n 
-0000006307 00000 n 
-0000006420 00000 n 
-0000006530 00000 n 
-0000006638 00000 n 
-0000006754 00000 n 
+0000005812 00000 n 
+0000007785 00000 n 
+0000005996 00000 n 
+0000006152 00000 n 
+0000006306 00000 n 
+0000006501 00000 n 
+0000006688 00000 n 
+0000006801 00000 n 
+0000006911 00000 n 
+0000007019 00000 n 
+0000007135 00000 n 
 trailer
 <<
-/Size 39
+/Size 40
 /Root 2 0 R
 /Info 4 0 R
 >>
 startxref
-7455
+7836
 %%EOF
